--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -25,7 +25,25 @@ html, body{
 .container-fluid {
 	font-family:  'Source Sans Pro', sans-serif;
 	color: #555450;
+		width:100%;
+  height: 100%;
+  display: block;
+  position: relative;
 }
+
+.container-fluid::after {
+  content: "";
+  background-image: url("../bg.jpg");
+  background-size: cover;
+  opacity: 0.2;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;   
+}
+
 
 .bg {
 	/*background-color: #FFFDF2;*/
@@ -33,6 +51,7 @@ html, body{
     border-width: 1px;
     border-color: #555450;
     padding: 2%;
+
 }
 
 #map {
