--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -20,9 +20,9 @@ html, body {
   position: fixed;
   bottom: 0;
   left: 0;
-  margin-bottom: 15px;
+  margin-bottom: 4%;
   margin-left : 15px;
-  max-width: 855px;
+  max-width: 50%;
 }
 
 .btn {
