--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -87,3 +87,22 @@ select {
   border-width: 1px;
   border-color: #555450;
 }
+
+.carousel-item{
+  text-align:center;
+}
+.carousel-inner img{
+  display:inline-block  !important;
+}
+.carousel-inner > .carousel-item > img {
+  width:50%;
+}
+
+
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%2330A64A' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+}
+
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%2330A64A' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+}
