--- a/static/styles/styles2.css
+++ b/static/styles/styles2.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
 @import url('https://fonts.googleapis.com/css?family=Rubik');
 @import url('https://fonts.googleapis.com/css?family=Inconsolata');
-
-
 body {
   padding: 0;
   margin: 0;
@@ -38,22 +36,19 @@ input {
   bottom: 0;
   left: 0;
   margin-bottom: 3%;
-  margin-left : 15px;
+  margin-left: 15px;
   max-width: 50%;
 }
 
 .btn.btn-outline-success {
   border: 1px solid #fff;
   color: #fff;
-  background: #F3585F;
+  background: #DC3D4C;
 }
 
-.btn.btn-outline-success:hover,
-.btn.btn-outline-success:focus,
-.btn.btn-outline-success:active,
-.btn.btn-outline-success.active {
+.btn.btn-outline-success:hover, .btn.btn-outline-success:focus, .btn.btn-outline-success:active, .btn.btn-outline-success.active {
   border: 1px solid #fff !important;
-  color: #F3585F !important;
+  color: #DC3D4C !important;
   background: #fff !important;
 }
 
@@ -85,6 +80,7 @@ input {
 }
 
 /* to keep gallery at an appropriate height */
+
 .fixed {
   height: 40vh;
   overflow: scroll;
@@ -103,11 +99,11 @@ input {
 .btnbg {
   width: 87vh;
   color: #FDF7F6;
-  background-color: #F3585F;
+  background-color: #DC3D4C;
   border-style: solid;
   border-width: 1px;
   border-radius: 5px;
-  border-color: #F3585F;
+  border-color: #DC3D4C;
   padding: 2%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -118,13 +114,15 @@ input {
   border-color: #555450;
 }
 
-.carousel-item{
-  text-align:center;
+.carousel-item {
+  text-align: center;
 }
-.carousel-inner img{
-  display:inline-block  !important;
+
+.carousel-inner img {
+  display: inline-block !important;
 }
-.carousel-inner > .carousel-item > img {
+
+.carousel-inner>.carousel-item>img {
   height: 300px;
   width: 300px;
   object-fit: contain;
@@ -132,21 +130,21 @@ input {
 
 #visitor_form {
   display: none;
-  position:fixed;
-z-index: 10000;
-overflow:auto;
-background-color: white;
-border-style: solid;
+  position: fixed;
+  z-index: 10000;
+  overflow: auto;
+  background-color: white;
+  border-style: solid;
   border-width: 1px;
   border-color: #555450;
-margin-left: 50%;
-width:40vh;
-height:35vh;
+  margin-left: 50%;
+  width: 40vh;
+  height: 35vh;
 }
 
 #actual_popup {
   padding: 5%;
-  position:absolute;
+  position: absolute;
 }
 
 #send_suggestion {
@@ -155,6 +153,5 @@ height:35vh;
 }
 
 #close_suggestion {
-   margin-top: 5%;
+  margin-top: 5%;
 }
-
