added paragraph headers explaining what every file does

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,3 +1,7 @@
+/*
+ * Singular CSS file which contains all styles used in the application.  
+ */
+
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
 @import url('https://fonts.googleapis.com/css?family=Rubik');
 @import url('https://fonts.googleapis.com/css?family=Inconsolata');
